syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos";

package parstech;

import "Common.proto";

// SETTINGS SERVICE DEFINITIONS

// Settings Admin Service for site configuration
service SettingsAdminService {
  // Site settings operations
  rpc GetSiteSettings (SiteSettingsRequest) returns (SiteSettingsResponse);
  rpc UpdateSiteSettings (UpdateSiteSettingsRequest) returns (ResponseDto);
  
  // SEO operations
  rpc GetSeoSettings (SeoSettingsRequest) returns (SeoSettingsResponse);
  rpc UpdateSeoSettings (UpdateSeoSettingsRequest) returns (ResponseDto);
  
  // Social links operations
  rpc GetSocialLinks (SocialLinksRequest) returns (SocialLinksResponse);
  rpc UpdateSocialLinks (UpdateSocialLinksRequest) returns (ResponseDto);
  
  // Sections operations
  rpc GetSections (SectionsRequest) returns (SectionsResponse);
  rpc UpdateSection (UpdateSectionRequest) returns (ResponseDto);
  rpc CreateSection (CreateSectionRequest) returns (ResponseDto);
  rpc DeleteSection (DeleteSectionRequest) returns (ResponseDto);
  
  // Discount panel operations
  rpc GetRepresentationTypes (RepresentationTypesRequest) returns (RepresentationTypesResponse);
  rpc CreateRepresentationType (CreateRepresentationTypeRequest) returns (ResponseDto);
  rpc UpdateRepresentationType (UpdateRepresentationTypeRequest) returns (ResponseDto);
  rpc DeleteRepresentationType (DeleteRepresentationTypeRequest) returns (ResponseDto);
  
  rpc GetRepresentations (RepresentationsRequest) returns (RepresentationsResponse);
  rpc CreateRepresentation (CreateRepresentationRequest) returns (ResponseDto);
  rpc UpdateRepresentation (UpdateRepresentationRequest) returns (ResponseDto);
  rpc DeleteRepresentation (DeleteRepresentationRequest) returns (ResponseDto);
}
