syntax = "proto3";
package Shop.Application.DTOs.OrderDetail;

message OrderDetail {
  int32 id = 1;
  int32 quantity = 2;
  int64 unit_price = 3;
  int64 line_total = 4;
  int64 discount_amount = 5;
  int64 tax_amount = 6;
  int64 final_total = 7;
  int32 product_id = 8;
  int32 stock_price_id = 9;
  string product_name = 10;
  string product_sku = 11;
  string image_url = 12;
  string image_alt = 13;
  int32 order_id = 14;
  string store_name = 15;
}
