syntax = "proto3";

package Shop.Application.DTOs.WalletTypes;

message WalletTypes {
    int32 type_id = 1;
    string type_title = 2;
    string? color = 3;
}
